--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,62 +13,61 @@
         android:id="@+id/titleTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="🎲 Игра в кубик 🎲"
-        android:textSize="32sp"
+        android:layout_marginTop="96dp"
+        android:text="@string/app_title"
+        android:textColor="@color/purple"
+        android:textSize="28sp"
         android:textStyle="bold"
-        android:textColor="@color/purple_700"
-        app:layout_constraintBottom_toTopOf="@+id/diceValueTextView"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="80dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/diceValueTextView"
+    <ImageView
+        android:id="@+id/diceImageView"
         android:layout_width="120dp"
         android:layout_height="120dp"
-        android:gravity="center"
-        android:text="?"
-        android:textSize="64sp"
-        android:textStyle="bold"
-        android:background="@drawable/dice_background"
-        android:textColor="@color/white"
-        app:layout_constraintBottom_toTopOf="@+id/resultTextView"
+        android:layout_marginTop="132dp"
+        android:scaleType="fitCenter"
+        android:src="@drawable/images"
+        android:contentDescription="@string/dice_image_description"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/titleTextView"
-        android:layout_marginTop="40dp"
-        android:layout_marginBottom="20dp" />
+        app:layout_constraintTop_toBottomOf="@id/titleTextView" />
 
     <TextView
         android:id="@+id/resultTextView"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Нажми кнопку, чтобы бросить кубик"
-        android:textSize="18sp"
+        android:layout_marginTop="168dp"
+        android:paddingHorizontal="16dp"
+        android:text="@string/initial_result_text"
+        android:textAlignment="center"
         android:textColor="@color/black"
-        app:layout_constraintBottom_toTopOf="@+id/rollButton"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/diceValueTextView"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="40dp" />
+        app:layout_constraintTop_toBottomOf="@id/diceImageView" />
 
     <Button
         android:id="@+id/rollButton"
-        android:layout_width="250dp"
-        android:layout_height="70dp"
-        android:text="БРОСИТЬ КУБИК"
-        android:textSize="22sp"
-        android:textStyle="bold"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:layout_marginBottom="80dp"
         android:backgroundTint="@color/purple_500"
+        android:paddingHorizontal="32dp"
+        android:paddingVertical="16dp"
+        android:text="@string/roll_button_text"
         android:textColor="@color/white"
-        android:padding="12dp"
-        android:foreground="?attr/selectableItemBackground"
+        android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/resultTextView"
-        android:layout_marginBottom="100dp" />
+        app:layout_constraintTop_toBottomOf="@id/resultTextView"
+        app:layout_constraintVertical_bias="0.487" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
